--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gabriel Jones</title>
+    <style>
+/* Reset CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+/* Base styles */
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+/* Top Header styles */
+.top-header {
+    background: #0c1e3b;
+    color: #fff;
+    padding: 10px 0;
+}
+
+.top-header a {
+    color: #fff; /* Colore del testo simile a un link */
+    text-decoration: underline; /* Sottolineato per indicare un link */
+    cursor: pointer; /* Cambia il cursore al passaggio del mouse */
+    font-size: 0.9em;
+}
+
+/* Header styles */
+header {
+    background: #004080;
+    color: #fff;
+    padding: 20px 0;
+}
+
+header h1 {
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    text-align: center;
+    margin-top: 10px;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/* Hero section styles */
+.hero {
+    background: #f4f4f4;
+    padding: 40px 0;
+    text-align: center;
+}
+
+.hero h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+.hero p {
+    font-size: 1.2em;
+}
+
+/* Services section styles */
+.services {
+    padding: 40px 0;
+}
+
+.services h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.service-cards {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card {
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    flex: 1;
+    margin: 0 10px;
+}
+
+.card h3 {
+    margin-bottom: 10px;
+}
+
+/* Contact section styles */
+.contact {
+    background: #f4f4f4;
+    padding: 40px 0;
+    text-align: center;
+}
+
+.contact h2 {
+    margin-bottom: 20px;
+}
+
+/* Footer styles */
+footer {
+    background: #004080;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+}
+
+footer p {
+    margin: 0;
+}      
+    </style>
+</head>
+<body>
+    <div class="top-header">
+        <div class="container">
+            <a href="http://dev-gabriel-jones.pantheonsite.io/" class="region-link">sito di proprietà di GJDEV</a>
+        </div>
+    </div>
+    <header>
+        <div class="container">
+            <h1>Gabriel Jones</h1>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/Curriculum/">|Curriculum</a></li>
+                    <li><a href="/mys/">|Crea il tuo sito</a></li>
+                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/">|Gabriel Jones</a></li>
+                    <li><a href="https://github.com/gjd-central/">|github</a></li>
+                    <li><a href="/documenti/">|Documenti</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+</body>
+</html>
