--- a/index.html
+++ b/index.html
@@ -5,70 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Jones</title>
     <style>
-.container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 0px;
-}
+        /* Stili per il contenitore principale */
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 0px;
+        }
 
-/* Top Header styles */
-.top-header {
-    background: #0c1e3b;
-    color: #fff;
-    padding: 10px 0;
-}
+        /* Stili per l'intestazione superiore */
+        .top-header {
+            background: #0c1e3b;
+            color: #fff;
+            padding: 10px 0;
+        }
 
-.top-header a {
-    color: #fff; /* Colore del testo simile a un link */
-    text-decoration: underline; /* Sottolineato per indicare un link */
-    cursor: pointer; /* Cambia il cursore al passaggio del mouse */
-    font-size: 0.9em;
-}
+        .top-header a {
+            color: #fff;
+            text-decoration: underline;
+            cursor: pointer;
+            font-size: 0.9em;
+        }
 
-/* Header styles */
-header {
-    background: #004080;
-    color: #fff;
-    padding: 20px 0;
-}
+        /* Stili per l'intestazione principale */
+        header {
+            background: #004080;
+            color: #fff;
+            padding: 20px 0;
+        }
 
-header h1 {
-    text-align: center;
-}
+        header h1 {
+            text-align: center;
+        }
 
-nav ul {
-    list-style: none;
-    text-align: center;
-    margin-top: 10px;
-}
+        nav ul {
+            list-style: none;
+            text-align: center;
+            margin-top: 10px;
+        }
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
 
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-}
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-/* Hero section styles */
-.hero {
-    background: #f4f4f4;
-    padding: 40px 0;
-    text-align: center;
-}
+        /* Stili per la sezione hero */
+        .hero {
+            background: #f4f4f4;
+            padding: 40px 0;
+            text-align: center;
+        }
 
-.hero h2 {
-    font-size: 2em;
-    margin-bottom: 10px;
-}
+        .hero h2 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
 
-.hero p {
-    font-size: 1.2em;
-}
-   
+        .hero p {
+            font-size: 1.2em;
+        }
     </style>
 </head>
 <body>
