--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Jones</title>
     <style>
+        /* Reset dei margini e del padding per tutti gli elementi */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         /* Stili per il contenitore principale */
         .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 0px;
+            max-width: 1200px; /* Larghezza massima del contenitore */
+            margin: 0 auto; /* Centra il contenitore orizzontalmente */
+            padding: 0 20px; /* Spaziatura interna del contenitore */
         }
 
         /* Stili per l'intestazione superiore */
@@ -17,6 +24,7 @@
             background: #0c1e3b;
             color: #fff;
             padding: 10px 0;
+            font-family: Arial, sans-serif; /* Font family per il testo */
         }
 
         .top-header a {
@@ -31,10 +39,12 @@
             background: #004080;
             color: #fff;
             padding: 20px 0;
+            font-family: Arial, sans-serif; /* Font family per il testo */
         }
 
         header h1 {
             text-align: center;
+            font-size: 2.5em; /* Dimensione del titolo */
         }
 
         nav ul {
@@ -52,6 +62,7 @@
             color: #fff;
             text-decoration: none;
             font-weight: bold;
+            font-size: 1.2em; /* Dimensione del testo dei link */
         }
 
         /* Stili per la sezione hero */
@@ -59,15 +70,16 @@
             background: #f4f4f4;
             padding: 40px 0;
             text-align: center;
+            font-family: Arial, sans-serif; /* Font family per il testo */
         }
 
         .hero h2 {
-            font-size: 2em;
+            font-size: 2.5em;
             margin-bottom: 10px;
         }
 
         .hero p {
-            font-size: 1.2em;
+            font-size: 1.4em;
         }
     </style>
 </head>
@@ -83,11 +95,11 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/Curriculum/">|Curriculum</a></li>
-                    <li><a href="/mys/">|Crea il tuo sito</a></li>
-                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/">|Gabriel Jones</a></li>
-                    <li><a href="https://github.com/gjd-central/">|github</a></li>
-                    <li><a href="/documenti/">|Documenti</a></li>
+                    <li><a href="/Curriculum/">| Curriculum</a></li>
+                    <li><a href="/mys/">| Crea il tuo sito</a></li>
+                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/">| Gabriel Jones</a></li>
+                    <li><a href="https://github.com/gjd-central/">| github</a></li>
+                    <li><a href="/documenti/">| Documenti</a></li>
                 </ul>
             </nav>
         </div>
