--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
             <h1>Gabriel Jones</h1>
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/Curriculum/">| Curriculum</a></li>
-                    <li><a href="/mys/">| Crea il tuo sito</a></li>
-                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/">| Gabriel Jones</a></li>
-                    <li><a href="https://github.com/gjd-central/">| github</a></li>
-                    <li><a href="/documenti/">| Documenti</a></li>
+                    <li><a href="/" target="_blank">Home</a></li>
+                    <li><a href="/Curriculum/" target="_blank">| Curriculum</a></li>
+                    <li><a href="/mys/" target="_blank">| Crea il tuo sito</a></li>
+                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/" target="_blank">| Gabriel Jones</a></li>
+                    <li><a href="https://github.com/gjd-central/" target="_blank">| github</a></li>
+                    <li><a href="/documenti/" target="_blank">| Documenti</a></li>
                 </ul>
             </nav>
         </div>
