--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Jones</title>
+    <link rel="stylesheet" href="https://gjd-central.github.io/379246/sc.css">
     <style>
         /* Reset dei margini e del padding per tutti gli elementi */
         * {
@@ -102,7 +103,18 @@
                     <li><a href="/documenti/" target="_blank">| Documenti</a></li>
                 </ul>
             </nav>
+                <div class = container>
+<div class="search-container">
+  <form id="searchForm">
+    <input type="text" id="searchInput" placeholder="Cerca...">
+    <button type="submit" id="searchButton">Cerca</button>
+  </form>
+  <div id="searchResults"></div>
+</div>
+    </div>
+
         </div>
     </header>
+    <script src="https://gjd-central.github.io/379246/script.js"></script>
 </body>
 </html>
