--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Jones</title>
-    <link rel="stylesheet" href="https://gjd-central.github.io/379246/sc.css">
     <style>
+        .search-container {
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 300px;
+}
+
+#searchForm {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+#searchInput {
+  flex: 1;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px 0 0 4px;
+  font-size: 16px;
+}
+
+#searchButton {
+  background-color: #007bff;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  padding: 8px 16px;
+  border-radius: 0 4px 4px 0;
+  font-size: 16px;
+}
+
+#searchResults {
+  margin-top: 10px;
+}
         /* Reset dei margini e del padding per tutti gli elementi */
         * {
             margin: 0;
