--- a/index.html
+++ b/index.html
@@ -132,24 +132,16 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/Curriculum/">| Curriculum</a></li>
-                    <li><a href="/mys/">| Crea il tuo sito</a></li>
-                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/">| Gabriel Jones</a></li>
-                    <li><a href="https://github.com/gjd-central/">| GitHub</a></li>
-                    <li><a href="/documenti/">| Documenti</a></li>
+                    <li><a href="/Curriculum/">Curriculum</a></li>
+                    <li><a href="/mys/">Crea il tuo sito</a></li>
+                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/">Gabriel Jones</a></li>
+                    <li><a href="https://github.com/gjd-central/">GitHub</a></li>
+                    <li><a href="/documenti/">Documenti</a></li>
+                    <li><a href="/search/">search bar</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div class="container">
-        <div class="search-container">
-            <form id="searchForm">
-                <input type="text" id="searchInput" placeholder="Cerca...">
-                <button type="submit" id="searchButton">Cerca</button>
-            </form>
-            <div id="searchResults"></div>
-        </div>
-    </div>
     <script src="https://gjd-central.github.io/379246/script.js"></script>
 </body>
 </html>
