--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
             font-size: 1.4em;
         }
 
+        h2 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
         /* Stili per il form di ricerca */
         .search-container {
             background-color: #fff;
