--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: Roboto; /* Font family per il testo */
+
         }
 
         /* Stili per il contenitore principale */
