--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 }
 
     </style>
+    <meta http-equiv="refresh" content="0; URL='https://www.nuovo-sito.it/blog'" />
 </head>
 <body>
     <div class="top-header">
@@ -209,25 +210,5 @@
             <a href="http://dev-gabriel-jones.pantheonsite.io/" class="region-link">Sito di proprietà di GJDEV</a>
         </div>
     </div>
-    <header>
-        <div class="container">
-            <h1>Gabriel Jones</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/Curriculum/">Curriculum</a></li>
-                    <li><a href="/mys/">Crea il tuo sito</a></li>
-                    <li><a href="http://dev-gabriel-jones.pantheonsite.io/">Gabriel Jones</a></li>
-                    <li><a href="https://github.com/gjd-central/">GitHub</a></li>
-                    <li><a href="/documenti/">Documenti</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <div class="container">
-        <h2>Ciao</h2>
-        <p>ciao</p>
-    </div>
-    <script src="https://gjd-central.github.io/379246/script.js"></script>
 </body>
 </html>
