--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 }
 
     </style>
-    <meta http-equiv="refresh" content="0; URL='https://gjdev8.github.io/public/'" />
+    <meta http-equiv="refresh" content="0; URL='https://gjdnetwork.github.io/public/'" />
 </head>
 <body>
     <div class="top-header">
