--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <!-- Contenuto della pagina -->
-    <iframe src="content/header/index.html" width="600" height="400" frameborder="0"></iframe>
-<iframe src="pagina_esterna.html" width="600" height="400" frameborder="0"></iframe>
-<iframe src="content/footer/index.html" width="100%" height="100%" frameborder="0"></iframe>
+    <iframe src="content/header/index.html" width="100%" height="100%" frameborder="0"></iframe>
+    <iframe src="pagina_esterna.html" width="100%" height="400" frameborder="0"></iframe>
+    <iframe src="content/footer/index.html" width="100%" height="100%" frameborder="0"></iframe>
 
     <!-- jQuery, Popper.js, Bootstrap 4 JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
