--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col">
-                <h1>Trasparenza dei miei lavori</h1>
-                <p>Benvenuti nella mia pagina dedicata alla trasparenza dei miei lavori.</p>
+                <h1>Trasparenza dei miei documenti</h1>
+                <p>Benvenuti nella mia pagina dedicata alla trasparenza dei miei documenti.</p>
 
                 <!-- Box "Documenti" -->
                 <div class="card mt-4">
