--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,7 @@
             const password = document.getElementById('password').value;
 
             const validUsername = 'admin';  // Cambia questo con il tuo username desiderato
-            const validPassword = 'password123';  // Cambia questo con la tua password desiderata
+            const validPassword = '5587';  // Cambia questo con la tua password desiderata
 
             if (username === validUsername && password === validPassword) {
                 localStorage.setItem('loggedIn', 'true');
