Dichiarazione di accessibilità

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
                                         <td><a href="https://gjdnetwork.github.io/tag/comune/Campo%20da%20basket%20(1).pdf">Proposta festa di ronche</a></td>
                                         <td>Comune</td>
                                     </tr>
+                                    <tr>
+                                        <td><a href="tag/gjd/dichiarazione-di-accessibilita/Dichiarazione di Accessibilità.pdf">Proposta festa di ronche</a></td>
+                                        <td>dichiarazione-di-accessibilita</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
