--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                         <td>Comune</td>
                                     </tr>
                                     <tr>
-                                        <td><a href="tag/gjd/dichiarazione-di-accessibilita/Dichiarazione di Accessibilità.pdf">Proposta festa di ronche</a></td>
+                                        <td><a href="tag/gjd/dichiarazione-di-accessibilita/Dichiarazione di Accessibilità.pdf">Dichiarazione di accessibilità ufficiale</a></td>
                                         <td>dichiarazione-di-accessibilita</td>
                                     </tr>
                                 </tbody>
