--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <table class="table table-bordered documenti-table">
                                 <thead>
                                     <tr>
-                                        <th>Nome documento</th>
+                                        <th><b>Nome documento</b></th>
                                         <th>Tag</th>
                                     </tr>
                                 </thead>
