--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                 <!-- Box "Documenti" -->
                 <div class="card mt-4">
                     <div class="card-header bg-primary text-white">
-                        Documenti ufficiali
+                        <b>Documenti ufficiali</b>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-bordered documenti-table">
                                 <thead>
                                     <tr>
-                                        <th><b>Nome documento</b></th>
+                                        <th>Nome documento</th>
                                         <th>Tag</th>
                                     </tr>
                                 </thead>
