--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <div class="nbody">
 
     <div class="container mt-4">
+        <script type="text/javascript" src="https://www.protezionecivile.fvg.it/widgets/pcrfvgit_alert.js"></script><div class="pcrfvgit_alert_widget" data-istatcode="93022"></div>
         <div class="row">
             <div class="col">
                 <h1>Trasparenza dei miei documenti</h1>
