--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- Stili di Italia Bootstrap e Italia Design -->
     <link rel="stylesheet" href="css/bootstrap-italia.min.css">
     <link rel="stylesheet" href="css/italia.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link rel="stylesheet" href="https://unpkg.com/bootstrap-italia@latest/dist/css/bootstrap-italia.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-italia@latest/dist/css/bootstrap-italia.min.css">
     <style>
         /* Stili aggiuntivi */
         body {
@@ -144,7 +145,49 @@
     </div>
   </div>
 
+
+
+        <div class="container mt-5">
+        <div class="row" id="posts-container">
+            <!-- I post verranno inseriti qui tramite JavaScript -->
+        </div>
+    </div>
+
+    
     <!-- Script di Bootstrap Italia -->
-    <script src="https://italia.github.io/bootstrap-italia/docs/js/bootstrap-italia.bundle.min.js"></script>
+        <script src="https://unpkg.com/bootstrap-italia@latest/dist/js/bootstrap-italia.bundle.min.js"></script>
+    <script src="https://italia.github.io/bootstrap-italia/dist/js/bootstrap-italia.min.js"></script>
+
+        <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            fetch('https://tuo-sito-wordpress.com/wp-json/wp/v2/posts')
+                .then(response => response.json())
+                .then(posts => {
+                    const postsContainer = document.getElementById('posts-container');
+                    posts.forEach(post => {
+                        // Crea la card per ogni post
+                        const postCard = `
+                            <div class="col-md-4 mb-4">
+                                <div class="it-card-wrapper">
+                                    <div class="it-card">
+                                        <div class="it-card-header">
+                                            <h5 class="it-card-title">${post.title.rendered}</h5>
+                                        </div>
+                                        <div class="it-card-body">
+                                            <p class="it-card-text">${post.excerpt.rendered}</p>
+                                            <a href="${post.link}" class="btn btn-primary">Leggi di più</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        `;
+                        postsContainer.innerHTML += postCard;
+                    });
+                })
+                .catch(error => console.error('Errore nel recuperare i post:', error));
+        });
+    </script>
+
+    
 </body>
 </html>
