--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
             color: #007bff;
             text-decoration: underline;
         }
+                .iframe-container {
+            position: relative;
+            width: 100%;
+            height: 600px; /* Altezza dell'iframe, da regolare secondo le necessità */
+            overflow: hidden;
+        }
+
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -70,6 +85,9 @@
 
     <div class="container mt-4">
         <script type="text/javascript" src="https://www.protezionecivile.fvg.it/widgets/pcrfvgit_alert.js"></script><div class="pcrfvgit_alert_widget" data-istatcode="93022"></div>
+        <div class="iframe-container">
+    <iframe src="https://gjdnetwork.github.io/allerts" frameborder="0"></iframe>
+</div>
         <div class="row">
             <div class="col">
                 <h1>Trasparenza dei miei documenti</h1>
