--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     <div class="container mt-4">
         <script type="text/javascript" src="https://www.protezionecivile.fvg.it/widgets/pcrfvgit_alert.js"></script><div class="pcrfvgit_alert_widget" data-istatcode="93022"></div>
-        <div class="iframe-container">
-    <iframe src="https://gjdnetwork.github.io/allerts" frameborder="0"></iframe>
+        <div style="position: relative; width: 100%; padding-bottom: 56.25%; overflow: hidden;">
+    <iframe src="https://gjdnetwork.github.io/allerts" frameborder="0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"></iframe>
 </div>
         <div class="row">
             <div class="col">
