--- a/index.html
+++ b/index.html
@@ -83,6 +83,31 @@
 
 <div class="nbody">
 
+
+
+
+
+
+
+
+
+
+<div class="card">
+  <div class="card-body">
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <div class="container mt-4">
         <script type="text/javascript" src="https://www.protezionecivile.fvg.it/widgets/pcrfvgit_alert.js"></script><div class="pcrfvgit_alert_widget" data-istatcode="93022"></div>
         <div class="row">
@@ -159,6 +184,24 @@
         </div>
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      </div>
+</div>
     <!-- Script di Bootstrap Italia -->
     <script src="https://italia.github.io/bootstrap-italia/docs/js/bootstrap-italia.bundle.min.js"></script>
   </div>
