--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 <div class="nbody">
 
 <h1>GJD network</h1>
-<p style="color: #1E90FF; text-align: center;">Questo è un testo blu al centro.</p>
+
+
+
+    <p style="color: #1E90FF; text-align: center; animation: highlight 2s infinite;">Questo è un testo blu al centro con animazione di evidenziatura.</p><style>@keyframes highlight { 0% { background-color: yellow; } 50% { background-color: transparent; } 100% { background-color: yellow; } }</style>
 
 
 
