--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 
-    <p style="color: #1E90FF; text-align: center; animation: highlight 2s infinite;">Questo è un testo blu al centro con animazione di evidenziatura.</p><style>@keyframes highlight { 0% { background-color: yellow; } 50% { background-color: transparent; } 100% { background-color: yellow; } }</style>
+<p style="color: #1E90FF; text-align: center; animation: highlight 2s infinite; display: inline-block; border-radius: 10px; background-color: #E0FFFF;">Questo è un testo blu al centro con animazione di evidenziatura.</p><style>@keyframes highlight { 0% { background-color: #E0FFFF; } 50% { background-color: transparent; } 100% { background-color: #E0FFFF; } }</style>
 
 
 
