--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 
-<p style="color: #1E90FF; text-align: center; animation: highlight 2s infinite; display: inline-block; border-radius: 10px; background-color: #E0FFFF;">Questo è un testo blu al centro con animazione di evidenziatura.</p><style>@keyframes highlight { 0% { background-color: #E0FFFF; } 50% { background-color: transparent; } 100% { background-color: #E0FFFF; } }</style>
+<div style="text-align: center;"><p style="color: #1E90FF; display: inline-block; border-radius: 10px; position: relative; overflow: hidden; white-space: nowrap;"><span style="animation: highlight 4s linear forwards;">Questo è un testo blu al centro con animazione di evidenziatura.</span></p></div><style>@keyframes highlight { 0% { background-color: transparent; width: 0%; } 100% { background-color: #E0FFFF; width: 100%; } } p span { display: inline-block; padding: 0 5px; }</style>
 
 
 
