--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@
 
 
 
+    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+  <div style="flex: 1 1 100%; max-width: 100%; height: 600px; background-color: #1E90FF; display: flex; align-items: center; justify-content: center;">
+    <div style="margin: 150px; color: white; font-size: 24px;">
+      Contenuto 1
+    </div>
+  </div>
+  <div style="flex: 1 1 100%; max-width: 100%; height: 600px; background-color: #FF6347; display: flex; align-items: center; justify-content: center;">
+    <div style="margin: 150px; color: white; font-size: 24px;">
+      Contenuto 2
+    </div>
+  </div>
+</div>
+<style>
+  @media (max-width: 768px) {
+    div {
+      flex-direction: column;
+    }
+  }
+</style>
+
+
+
 
 
 
