--- a/index.html
+++ b/index.html
@@ -106,15 +106,14 @@
 </style>
 
 
-
-    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-  <div style="flex: 1 1 100%; max-width: 100%; height: 600px; background-color: #1E90FF; display: flex; align-items: center; justify-content: center;">
-    <div style="margin: 150px; color: white; font-size: 24px;">
+<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+  <div style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; display: flex; align-items: center; justify-content: center; box-sizing: border-box;">
+    <div style="margin: 600px; color: white; font-size: 24px; text-align: center;">
       Contenuto 1
     </div>
   </div>
-  <div style="flex: 1 1 100%; max-width: 100%; height: 600px; background-color: #FF6347; display: flex; align-items: center; justify-content: center;">
-    <div style="margin: 150px; color: white; font-size: 24px;">
+  <div style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; display: flex; align-items: center; justify-content: center; box-sizing: border-box;">
+    <div style="margin: 600px; color: white; font-size: 24px; text-align: center;">
       Contenuto 2
     </div>
   </div>
@@ -126,9 +125,6 @@
     }
   }
 </style>
-
-
-
 
 
 
