--- a/index.html
+++ b/index.html
@@ -107,66 +107,25 @@
 
 
 <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-  <div style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; display: flex; align-items: center; justify-content: center; box-sizing: border-box;">
-    <div style="margin: 600px; color: white; font-size: 24px; text-align: center;">
-      Contenuto 1
-    </div>
-  </div>
-  <div style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; display: flex; align-items: center; justify-content: center; box-sizing: border-box;">
-    <div style="margin: 600px; color: white; font-size: 24px; text-align: center;">
-      Contenuto 2
-    </div>
-  </div>
+  <button style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; color: white; font-size: 24px; text-align: center; position: relative;">
+    <span style="position: absolute; margin: 0 600px; text-align: center;">
+      <h2><b>Contenuto 1</b></h2>
+    </span>
+  </button>
+  <button style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; color: white; font-size: 24px; text-align: center; position: relative;">
+    <span style="position: absolute; margin: 0 600px; text-align: center;">
+      <h2><b>Contenuto 2</b></h2>
+    </span>
+  </button>
 </div>
 <style>
   @media (max-width: 768px) {
     div {
       flex-direction: column;
+      align-items: center;
     }
   }
 </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
