--- a/index.html
+++ b/index.html
@@ -105,18 +105,17 @@
   }
 </style>
 
-
 <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-  <button style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; color: white; font-size: 24px; text-align: center; position: relative;">
-    <span style="position: absolute; margin: 0 600px; text-align: center;">
+  <a href="https://example.com/link1" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; text-decoration: none;">
+    <span style="margin: 0 600px; color: white; font-size: 24px; text-align: center;">
       <h2><b>Contenuto 1</b></h2>
     </span>
-  </button>
-  <button style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; color: white; font-size: 24px; text-align: center; position: relative;">
-    <span style="position: absolute; margin: 0 600px; text-align: center;">
+  </a>
+  <a href="https://example.com/link2" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; text-decoration: none;">
+    <span style="margin: 0 600px; color: white; font-size: 24px; text-align: center;">
       <h2><b>Contenuto 2</b></h2>
     </span>
-  </button>
+  </a>
 </div>
 <style>
   @media (max-width: 768px) {
@@ -126,10 +125,6 @@
     }
   }
 </style>
-
-
-
-
 
 
 
