--- a/index.html
+++ b/index.html
@@ -105,14 +105,25 @@
   }
 </style>
 
-<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-  <a href="https://example.com/link1" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; text-decoration: none;">
-    <span style="margin: 0 600px; color: white; font-size: 24px; text-align: center;">
+
+
+
+
+
+
+
+
+
+
+
+    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+  <a href="https://example.com/link1" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; display: flex; align-items: center; justify-content: center; text-decoration: none; color: white; font-size: 24px; text-align: center; position: relative;">
+    <span style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; padding: 0 600px; text-align: center;">
       <h2><b>Contenuto 1</b></h2>
     </span>
   </a>
-  <a href="https://example.com/link2" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; border: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box; cursor: pointer; text-decoration: none;">
-    <span style="margin: 0 600px; color: white; font-size: 24px; text-align: center;">
+  <a href="https://example.com/link2" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; display: flex; align-items: center; justify-content: center; text-decoration: none; color: white; font-size: 24px; text-align: center; position: relative;">
+    <span style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; padding: 0 600px; text-align: center;">
       <h2><b>Contenuto 2</b></h2>
     </span>
   </a>
@@ -125,17 +136,6 @@
     }
   }
 </style>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
