--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
 
 
 
-    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-  <a href="https://example.com/link1" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; display: flex; align-items: center; justify-content: center; text-decoration: none; color: white; font-size: 24px; text-align: center; position: relative;">
-    <span style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; padding: 0 600px; text-align: center;">
+<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+  <a href="https://example.com/link1" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #1E90FF; display: flex; align-items: center; justify-content: center; text-decoration: none; position: relative;">
+    <span style="color: white; font-size: 24px; text-align: center; padding: 0 600px;">
       <h2><b>Contenuto 1</b></h2>
     </span>
   </a>
-  <a href="https://example.com/link2" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; display: flex; align-items: center; justify-content: center; text-decoration: none; color: white; font-size: 24px; text-align: center; position: relative;">
-    <span style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; padding: 0 600px; text-align: center;">
+  <a href="https://example.com/link2" style="flex: 1 1 calc(50% - 10px); height: 600px; background-color: #FF6347; display: flex; align-items: center; justify-content: center; text-decoration: none; position: relative;">
+    <span style="color: white; font-size: 24px; text-align: center; padding: 0 600px;">
       <h2><b>Contenuto 2</b></h2>
     </span>
   </a>
